corpus/literals.txt
============================================
Comment
============================================

// This is a comment

---

(ERROR
  (comment))

============================================
Integer literal
============================================

integer foo = 42;

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (integer_literal)))

============================================
Float literals
============================================

float foo = 42.;
float foo = 42.42;
float foo = .42;

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (float_literal))
  (variable_declaration
    (type_name)
    (identifier)
    (float_literal))
  (variable_declaration
    (type_name)
    (identifier)
    (float_literal)))



============================================
Empty string literal
============================================

string foo = "";

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (string_literal)))

============================================
String literal
============================================

string foo = "foo bar";

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (string_literal)))

============================================
String literal with escape sequences
============================================

string foo = "foo \" \n bar";

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (string_literal)))

============================================
Empty list literal
============================================

list foo = [];

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (list_literal)))

============================================
List literal
============================================

list foo = [42];
list foo = [42, 34, 25];

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (list_literal (integer_literal)))
  (variable_declaration
    (type_name)
    (identifier)
    (list_literal
      (integer_literal)
      (integer_literal)
      (integer_literal))))

============================================
Vector literal
============================================

vector foo = <42, 42, 42>;

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (vector_literal
      (integer_literal)
      (integer_literal)
      (integer_literal))))

============================================
Quaternion literal
============================================

rotation foo = <42, 42, 42, 42>;

---

(ERROR
  (variable_declaration
    (type_name)
    (identifier)
    (quaternion_literal
      (integer_literal)
      (integer_literal)
      (integer_literal)
      (integer_literal))))
